--- a/magic.html
+++ b/magic.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <body>
-
     <div id="oval"></div>
-    <div id="petal" style="
-        display:        none;
-        position:      absolute;
-        left:          100px;
-        top:           550px;
-        width:         25px;
-        height:        150px;
-        border-radius: 50% 50% 50% 50%;
-        background:    #ffd600">
-    </div>
-    <script src="magic.js"></script>    
-
+    <div
+      id="petal"
+      style="
+        display: none;
+        position: absolute;
+        left: 100px;
+        top: 550px;
+        width: 40px;
+        height: 70px;
+        border-radius: 90% 5% 90% 5%;
+        background: #db979f;
+      "
+    ></div>
+    <script src="magic.js"></script>
   </body>
 </html>
