directory to js

--- a/magic.html
+++ b/magic.html
@@ -15,6 +15,6 @@
         background: #db979f;
       "
     ></div>
-    <script src="magic.js"></script>
+    <script src="./source/magic.js"></script>
   </body>
 </html>
