--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         background: #db979f;
       "
     ></div>
-    <script src="./source/magic.js"></script>
+    <script src="./magic.js"></script>
   </body>
 </html>
